force-app/main/default/objects/Assignment_Group_Record_Queue__c/Assignment_Group_Record_Queue__c.object-meta.xml
<CustomObject>
    <label>QA Assignment Group Record Queue</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Assignment Group Record Queue Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Assignment Group Record Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>