force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assignment Group that was processing the related record</description>
    <inlineHelpText>Assignment Group that was processing the related record</inlineHelpText>
    <label>Assignment Group</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipLabel>Assignment Group Record Queues</relationshipLabel>
    <relationshipName>Assignment_Group_Record_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>