force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Last_Processing_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processing_Attempt_Date__c</fullName>
    <description>The date/time when an attempt was last made to process the related record.</description>
    <inlineHelpText>The date/time when an attempt was last made to process the related record.</inlineHelpText>
    <label>Last Processing Attempt Date</label>
    <type>DateTime</type>
</CustomField>