force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Next_Processing_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Processing_Attempt_Date__c</fullName>
    <description>The next date/time when an attempt will be made to process the related record. This date/time will be used to exclude the related record from processing when the date/time is in the future.</description>
    <inlineHelpText>The next date/time when an attempt will be made to process the related record. This date/time will be used to exclude the related record from processing when the date/time is in the future.</inlineHelpText>
    <label>Next Processing Attempt Date</label>
    <type>DateTime</type>
</CustomField>