force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Record Id of the actual record being assigned</description>
    <externalId>true</externalId>
    <inlineHelpText>Record Id of the actual record being assigned</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>