force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Related_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Link__c</fullName>
    <description>Link to View the actual record being processed</description>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; Related_Record_Id__c,
  &quot;View Record&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to View the actual record being processed</inlineHelpText>
    <label>Related Record Link</label>
    <type>Text</type>
</CustomField>