force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Related_Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Object__c</fullName>
    <externalId>true</externalId>
    <label>Related Record Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>