force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scheduler that was processing the related record</description>
    <inlineHelpText>Scheduler that was processing the related record</inlineHelpText>
    <label>Scheduler</label>
    <referenceTo>Assignment_Configuration__c</referenceTo>
    <relationshipLabel>Assignment Group Record Queues</relationshipLabel>
    <relationshipName>Assignment_Group_Record_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>