force-app/main/default/objects/Assignment_Group_Record_Queue__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>Message related to current Status</description>
    <inlineHelpText>Message related to current Status</inlineHelpText>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>