force-app/main/default/objects/Assignment_Group_Record_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scheduler__c</columns>
    <columns>Assignment_Group__c</columns>
    <columns>Related_Record_Link__c</columns>
    <columns>Related_Record_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Processing_Attempt_Date__c</columns>
    <columns>Next_Processing_Attempt_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>